Fix moving hashes that use ar_table across ractors

Hashes that use ar_table didn't copy over the ar_table value pairs to
the moved hashe's ar_table. This caused weird behavior such as missing
values or crashes at runtime.

[Bug #20267]